Fix keyboard clipping

--- a/style.css
+++ b/style.css
@@ -200,8 +200,7 @@ html, body {
 .keyboard {
     width: 100%;
     margin-top: auto;
-    margin-bottom: 10px;
-    margin-top: auto;
+    margin-bottom: 50px;
     zoom: 0.8;
     -moz-transform: scale(0.8);
 }
